--- a/index.html
+++ b/index.html
@@ -8,27 +8,36 @@
       <title>Master Class Machine Learning</title>
       <script src="https://unpkg.com/ml5@0.1.3/dist/ml5.min.js"></script>
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-      <link href="https://fonts.googleapis.com/css?family=Audiowide|Roboto&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Days+One|Roboto&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="styles.css">
     </head>
 
   <body>
     <div class="container-fluid">
-      <section id="title" class="text-center font-weight-light p-2">
-          Master Class Machine Learning Basics
+      <section id="title" class="text-left font-weight-light p-2">
+        <img src="logo-white.png" id="logo">
+        <span>INTRO 2 ML</span>
       </section>
       <section id="intro" class="p-5">
-          <h3>Welkom bij de Masterclass Machine Learning Basics</h3>
-          <div class="mx-3">
-              <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget sit amet tellus cras adipiscing. Id donec ultrices tincidunt arcu non sodales neque sodales ut. Gravida dictum fusce ut placerat. Feugiat vivamus at augue eget arcu dictum. Eget duis at tellus at urna. Euismod nisi porta lorem mollis aliquam ut porttitor leo a. In hendrerit gravida rutrum quisque. Dui ut ornare lectus sit amet est placerat. Vel fringilla est ullamcorper eget. Pellentesque massa placerat duis ultricies lacus. Nisl vel pretium lectus quam. Lacus sed turpis tincidunt id aliquet risus feugiat. Vestibulum sed arcu non odio euismod lacinia at.
-              </p>
-              <p>
-                  Proin fermentum leo vel orci porta. Lectus magna fringilla urna porttitor rhoncus dolor purus non. Nec feugiat in fermentum posuere urna. Tortor dignissim convallis aenean et tortor at risus viverra. Tincidunt tortor aliquam nulla facilisi cras fermentum odio eu feugiat. Faucibus ornare suspendisse sed nisi. Ut diam quam nulla porttitor massa id neque. Tortor pretium viverra suspendisse potenti nullam ac tortor vitae purus. Cras pulvinar mattis nunc sed blandit libero volutpat. Sodales ut etiam sit amet nisl purus in. Vitae auctor eu augue ut lectus arcu bibendum at. Ac turpis egestas integer eget aliquet. Morbi tristique senectus et netus et malesuada fames. Ultrices in iaculis nunc sed augue lacus.
-              </p>
-          </div>
-          
-
+          <h3 class="display-4">
+            Masterclass Machine Learning
+          </h3>
+            <p class="lead">
+              Je hebt vast wel eens gehoord van <em>Machine Learning</em>, <em>Neurale Netwerken</em> en <em>Deep Learning</em>.
+              Wat schuilt er achter deze begrippen en wat hebben ze met elkaar te maken?
+              Als Engineer werk je met of aan machines, maar heb je ooit een machine zien leren?
+              Heb je er wel eens één getraind?
+            </p>
+            <p>
+              Wellicht was je perceptie dat deze computertechnologie het exclusieve domein is van specialisten,
+              van wetenschappers in dienst van topbedrijven als Google en IBM. Niks is minder waar.
+              De kracht van de moderne intelligente systemen schuilt juist in hun eenvoud. 
+              Men is steeds opnieuw verrast hoe de complexiteit van de reële wereld in simpele regels kan worden gevangen.
+            </p>
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item px-5" src="https://www.youtube.com/embed/kopoLzvh5jY" allowfullscreen></iframe>
+            </div>
+            
       </section>
       <section id="example" class="p-5">
         <figure class="figure p-3">
@@ -42,7 +51,7 @@
       </section> 
       <section id="aboutme" class="p-5">
           <h3>Witek ten Hove</h3>
-          <div class="mx-3">
+          <div class="">
               <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget sit amet tellus cras adipiscing. Id donec ultrices tincidunt arcu non sodales neque sodales ut. Gravida dictum fusce ut placerat. Feugiat vivamus at augue eget arcu dictum. Eget duis at tellus at urna. Euismod nisi porta lorem mollis aliquam ut porttitor leo a. In hendrerit gravida rutrum quisque. Dui ut ornare lectus sit amet est placerat. Vel fringilla est ullamcorper eget. Pellentesque massa placerat duis ultricies lacus. Nisl vel pretium lectus quam. Lacus sed turpis tincidunt id aliquet risus feugiat. Vestibulum sed arcu non odio euismod lacinia at.
               </p>
