--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
               De kracht van de moderne intelligente systemen schuilt juist in hun eenvoud. 
               Men is steeds opnieuw verrast hoe de complexiteit van de reële wereld in simpele regels kan worden gevangen.
             </p>
-            <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item px-5" src="https://www.youtube.com/embed/kopoLzvh5jY" allowfullscreen></iframe>
+            <div class="embed-responsive embed-responsive-16by9 d-block">
+                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/kopoLzvh5jY" allowfullscreen></iframe>
             </div>
-            
       </section>
       <section id="example" class="p-5">
         <figure class="figure p-3">
