--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
               van wetenschappers in dienst van topbedrijven als Google en IBM. Niks is minder waar.
               De kracht van de moderne intelligente systemen schuilt juist in hun eenvoud. 
               Men is steeds opnieuw verrast hoe de complexiteit van de reële wereld in simpele regels kan worden gevangen.
+              Zelfs onze evolutie kan met nagebootst worden door de computer verstoppertje met zichzelf te laten spelen. Miljoenen keren.
             </p>
-            <div class="embed-responsive embed-responsive-16by9 d-block">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/kopoLzvh5jY" allowfullscreen></iframe>
+            <br>
+            <div class="embed-responsive embed-responsive-16by9 d-block p-5">
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/kopoLzvh5jY" allowfullscreen></iframe>
             </div>
       </section>
+      
       <section id="example" class="p-5">
         <figure class="figure p-3">
             <img class="rounded mx-auto d-block" src="https://upload.wikimedia.org/wikipedia/commons/0/0d/PET_Bottle_Water.jpg"
