--- a/index.html
+++ b/index.html
@@ -22,24 +22,25 @@
           <h3 class="display-4">
             Masterclass Machine Learning
           </h3>
-            <p class="lead">
-              Je hebt vast wel eens gehoord van <em>Machine Learning</em>, <em>Neurale Netwerken</em> en <em>Deep Learning</em>.
-              Wat schuilt er achter deze begrippen en wat hebben ze met elkaar te maken?
-              Als Engineer werk je met of aan machines, maar heb je ooit een machine zien leren?
-              Heb je er wel eens één getraind?
-            </p>
-            <p>
-              Wellicht was je perceptie dat deze computertechnologie het exclusieve domein is van specialisten,
-              van wetenschappers in dienst van topbedrijven als Google en IBM. Niks is minder waar.
-              De kracht van de moderne intelligente systemen schuilt juist in hun eenvoud. 
-              Men is steeds opnieuw verrast hoe de complexiteit van de reële wereld in simpele regels kan worden gevangen.
-              Zelfs onze evolutie kan met nagebootst worden door de computer verstoppertje met zichzelf te laten spelen. Miljoenen keren.
-            </p>
-            <br>
-            <div class="embed-responsive embed-responsive-16by9 d-block p-5">
-              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/kopoLzvh5jY" allowfullscreen></iframe>
-            </div>
+          <p class="lead">
+            Je hebt vast wel eens gehoord van <em>Machine Learning</em>, <em>Neurale Netwerken</em> en <em>Deep Learning</em>.
+            Wat schuilt er achter deze begrippen en wat hebben ze met elkaar te maken?
+            Als Engineer werk je met of aan machines, maar heb je ooit een machine zien leren?
+            Heb je er wel eens één getraind?
+          </p>
+          <p>
+            Wellicht was je perceptie dat deze computertechnologie het exclusieve domein is van specialisten,
+            van wetenschappers in dienst van topbedrijven als Google en IBM. Niks is minder waar.
+            De kracht van de moderne intelligente systemen schuilt juist in hun eenvoud. 
+            Men is steeds opnieuw verrast hoe de complexiteit van de reële wereld in simpele regels kan worden gevangen.
+            Zelfs onze evolutie kan met nagebootst worden door de computer verstoppertje met zichzelf te laten spelen. Miljoenen keren.
+          </p>
+          <br>
+          <div class="container embed-responsive embed-responsive-16by9 d-block p-5">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/kopoLzvh5jY" allowfullscreen></iframe>
+          </div>
       </section>
+      
       
       <section id="example" class="p-5">
         <figure class="figure p-3">
