--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
       <section id="title" class="text-left font-weight-light p-2">
         <img src="logo-white.png" id="logo">
-        <span>INTRO 2 ML</span>
+        INTRO 2 ML
       </section>
       <section id="intro" class="p-5">
           <h3 class="display-4">
@@ -28,7 +28,7 @@
             Als Engineer werk je met of aan machines, maar heb je ooit een machine zien leren?
             Heb je er wel eens één getraind?
           </p>
-          <p>
+          <p class="font-weight-light">
             Wellicht was je perceptie dat deze computertechnologie het exclusieve domein is van specialisten,
             van wetenschappers in dienst van topbedrijven als Google en IBM. Niks is minder waar.
             De kracht van de moderne intelligente systemen schuilt juist in hun eenvoud. 
@@ -39,10 +39,20 @@
           <div class="container embed-responsive embed-responsive-16by9 d-block p-5">
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/kopoLzvh5jY" allowfullscreen></iframe>
           </div>
+          <br>
+          <p>
+            Wil jij in een paar uur leren hoe je met Machine Learning aan de gang kunt gaan?
+            Kom dan naar de Masterclass INTRO 2 ML van Witek ten Hove.
+          </p>
       </section>
-      
-      
-      <section id="example" class="p-5">
+      <section id="details" class="p-5">
+        <h3>
+          Wat ga we doen?
+        </h3>
+        <p>
+          Het programma bestaat voor het grootste gedeelte uit ervaren en verkennen. Neem dus een laptop mee. 
+          Er zullen veel voorbeelden worden aangereikt, die je direct zelf kunt testen.
+        </p>
         <figure class="figure p-3">
             <img class="rounded mx-auto d-block" src="https://upload.wikimedia.org/wikipedia/commons/0/0d/PET_Bottle_Water.jpg"
           crossorigin="anonymous" id="image" width="40%">
