Changes to layout

--- a/index.html
+++ b/index.html
@@ -18,49 +18,117 @@
         <img src="logo-white.png" id="logo">
         INTRO 2 ML
       </section>
-      <section id="intro" class="p-5">
-          <h3 class="display-4">
-            Masterclass Machine Learning
-          </h3>
-          <p class="lead">
-            Je hebt vast wel eens gehoord van <em>Machine Learning</em>, <em>Neurale Netwerken</em> en <em>Deep Learning</em>.
-            Wat schuilt er achter deze begrippen en wat hebben ze met elkaar te maken?
-            Als Engineer werk je met of aan machines, maar heb je ooit een machine zien leren?
-            Heb je er wel eens één getraind?
-          </p>
-          <p class="font-weight-light">
-            Wellicht was je perceptie dat deze computertechnologie het exclusieve domein is van specialisten,
-            van wetenschappers in dienst van topbedrijven als Google en IBM. Niks is minder waar.
-            De kracht van de moderne intelligente systemen schuilt juist in hun eenvoud. 
-            Men is steeds opnieuw verrast hoe de complexiteit van de reële wereld in simpele regels kan worden gevangen.
-            Zelfs onze evolutie kan met nagebootst worden door de computer verstoppertje met zichzelf te laten spelen. Miljoenen keren.
-          </p>
-          <br>
-          <div class="container embed-responsive embed-responsive-16by9 d-block p-5">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/kopoLzvh5jY" allowfullscreen></iframe>
+      <section id="jumbotron" class="p-2">
+        <div class="jumbotron mx-auto">
+          <div class="container">
+            <h1 class="display-4">Leren hoe Machine Learning werkt?</h1>
+            <p class="lead">
+              Kom dan op 19 november 2019 naar de Masterclass INTRO 2 ML van Witek ten Hove.<br>
+              Tijd: 16:00u<br>
+              locatie: QING Groep
+            </p>
           </div>
-          <br>
-          <p>
-            Wil jij in een paar uur leren hoe je met Machine Learning aan de gang kunt gaan?
-            Kom dan naar de Masterclass INTRO 2 ML van Witek ten Hove.
-          </p>
+        </div>
+      </section>
+      <section id="intro" class="p-5">
+        <h3>
+          Masterclass Machine Learning
+        </h3>
+        <p class="lead">
+          Je hebt vast wel eens gehoord van <em>Machine Learning</em>, <em>Neurale Netwerken</em> en <em>Deep Learning</em>.
+          Wat schuilt er achter deze begrippen en wat hebben ze met elkaar te maken?
+          Als Engineer werk je met of aan machines, maar heb je ooit een machine zien leren?
+          Heb je er wel eens één getraind?
+        </p>
+        <p class="font-weight-light">
+          Wellicht was je perceptie dat deze computertechnologie het exclusieve domein is van specialisten,
+          van wetenschappers in dienst van topbedrijven als Google en IBM. Niks is minder waar.
+          De kracht van de moderne intelligente systemen schuilt juist in hun eenvoud. 
+          Men is steeds opnieuw verrast hoe de complexiteit van de reële wereld in simpele regels kan worden gevangen.
+          Zelfs onze evolutie kan met nagebootst worden door de computer verstoppertje met zichzelf te laten spelen. Miljoenen keren.
+        </p>
+        <br>
+        <div class="container embed-responsive embed-responsive-16by9 d-block p-5">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/kopoLzvh5jY" allowfullscreen></iframe>
+        </div>
+        <br>
       </section>
       <section id="details" class="p-5">
-        <h3>
-          Wat ga we doen?
-        </h3>
-        <p>
-          Het programma bestaat voor het grootste gedeelte uit ervaren en verkennen. Neem dus een laptop mee. 
-          Er zullen veel voorbeelden worden aangereikt, die je direct zelf kunt testen.
-        </p>
-        <figure class="figure p-3">
-            <img class="rounded mx-auto d-block" src="https://upload.wikimedia.org/wikipedia/commons/0/0d/PET_Bottle_Water.jpg"
-          crossorigin="anonymous" id="image" width="40%">
-          <figcaption class="figure-caption pt-3 text-center">The MobileNet model labeled this as
-              <span id="result">...</span> with a confidence of
-              <span id="probability">...</span>
-          </figcaption>
-        </figure>
+        <div class="row">
+          <div class="col">
+              <h3>
+                  Wat gaan we doen?
+              </h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <p>
+              Het programma bestaat voor het grootste gedeelte uit ervaren en verkennen.
+              Er zullen veel voorbeelden worden aangereikt, die je direct zelf kunt testen.
+              <div class="alert alert-primary display-4 text-center" role="alert">Neem een laptop mee!</div>
+            </p>
+          </div>
+        </div>
+        <div class="row my-5">
+          <div class="col">
+            <div class="card">
+                <h5 class="card-header">Voor wie?</h5>
+                <div class="card-body">
+                  <table class="table table-bordered card-text">
+                      <tbody>
+                        <tr>
+                          <th scope="row"><span class="checkmark align-middle">&#x2611</span></th>
+                          <td><span class=" checkmark align-middle"></span>Novices - don’t know what they don’t know</td>
+                        </tr>
+                        <tr>
+                            <th scope="row"><span class="checkmark">&#x2611</span></th>
+                            <td><span class=" checkmark align-middle"></span>Competent practitioners - know what they don’t know</td>
+                        </tr>
+                        <tr>
+                            <th scope="row"><span class="checkmark">&#x2610</span></th>
+                            <td><span class=" checkmark align-middle"></span>Experts - have mental models that include exceptions and special cases, which allows allows them to handle situations that are out of the ordinary</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                </div>
+            </div>
+          </div>
+          <div class="col">
+              <div class="card">
+                  <h5 class="card-header">Leerdoelen</h5>
+                  <div class="card-body">
+                    <table class="table table-bordered card-text">
+                        <tbody>
+                          <tr>
+                            <th scope="row"><span class="checkmark align-middle">&#x2606</span></th>
+                            <td><span class=" checkmark align-middle"></span>Kent sleutelelementen uit een machine learning workflow</td>
+                          </tr>
+                          <tr>
+                              <th scope="row"><span class="checkmark">&#x2606</span></th>
+                              <td><span class=" checkmark align-middle"></span>Kent relaties tussen sleutelelementen uit een machine learning workflow</td>
+                          </tr>
+                          <tr>
+                              <th scope="row"><span class="checkmark">&#x2606</span></th>
+                              <td><span class=" checkmark align-middle"></span>Kan in een bestaande workflow de verschillende sleutelelementen herkennen</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                  </div>
+              </div>
+            </div>
+        </div>
+        <div class="container">
+            <figure class="figure p-3">
+                <img class="rounded mx-auto d-block" src="https://upload.wikimedia.org/wikipedia/commons/0/0d/PET_Bottle_Water.jpg"
+              crossorigin="anonymous" id="image" width="40%">
+              <figcaption class="figure-caption pt-3 text-center">The MobileNet model labeled this as
+                  <span id="result">...</span> with a confidence of
+                  <span id="probability">...</span>
+              </figcaption>
+            </figure>
+        </div>
+        
       </section> 
       <section id="aboutme" class="p-5">
           <h3>Witek ten Hove</h3>
