--- a/site/index.html
+++ b/site/index.html
@@ -45,7 +45,7 @@
           van wetenschappers in dienst van topbedrijven als Google en IBM. Niks is minder waar.
           De kracht van de moderne intelligente systemen schuilt juist in hun eenvoud. 
           Men is steeds opnieuw verrast hoe de complexiteit van de reële wereld in simpele regels kan worden gevangen.
-          Zelfs onze evolutie kan met nagebootst worden door de computer verstoppertje met zichzelf te laten spelen. Miljoenen keren.
+          Zelfs onze evolutie kan nagebootst worden door de computer verstoppertje met zichzelf te laten spelen. Miljoenen keren.
         </p>
         <br>
         <div class="container embed-responsive embed-responsive-16by9 d-block p-5">
