--- a/site/index.html
+++ b/site/index.html
@@ -137,7 +137,7 @@
                       <p>
                         Het voorbeeld toont aan hoe makkelijk het inmiddels is om ML te integreren in een applicatie. 
                         Het vergt niet meer dan een browser en een internetverbinding. Omdat het systeem als open source wordt aangeboden en 
-                        er veel documentatie beschikbaar is met tutorials en voorbeelden, kun je snel aan de gang en experimenteren boeken.
+                        er veel documentatie beschikbaar is met tutorials en voorbeelden, kun je snel aan de gang en experimenteren.
                       </p>
                       <p>
                         Tijdens de Masterclass gaan we kijken naar het systeem dat gebruikt is om het model dit model te genereren: een neuraal netwerk.
