--- a/site/index.html
+++ b/site/index.html
@@ -173,7 +173,7 @@
               </p>
           </div>
         <figure class="figure">
-            <img  class="rounded mx-auto d-block" src="aboutme.png" id="aboutme" width="40%">
+            <img  class="rounded mx-auto d-block img-fluid" src="aboutme.png" id="aboutme" width="40%">
         </figure>
       </section>     
     </div>
