--- a/site/index.html
+++ b/site/index.html
@@ -140,7 +140,7 @@
                         er veel documentatie beschikbaar is met tutorials en voorbeelden, kun je snel aan de gang en experimenteren.
                       </p>
                       <p>
-                        Tijdens de Masterclass gaan we kijken naar het systeem dat gebruikt is om het model dit model te genereren: een neuraal netwerk.
+                        Tijdens de Masterclass gaan we kijken naar het systeem dat gebruikt is om dit voorbeeld te genereren: een neuraal netwerk.
                         Je leert de principes van een neuron en hoe die is geprogrammeerd. Daarna gaan we kijken hoe uit meerdere neuronen een slim netwerk 
                         ontstaat dat vanuit complexe data regels kan genereren (het uiteindelijke model). 
                       </p> 
