--- a/site/index.html
+++ b/site/index.html
@@ -12,7 +12,7 @@
       <link rel="stylesheet" href="styles.css">
     </head>
 
-  <body>
+  <body onload="myClassifier()">
     <div class="container-fluid">
       <section id="title" class="text-left font-weight-light p-2">
         <img src="logo-white.png" id="logo">
@@ -182,28 +182,31 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script>
-      // The image we want to classify
-      const image = document.querySelector('#image');
-      // The result tag in the HTML
-      const result = document.getElementById('result');
-      // The probability tag in the HTML
-      const probability = document.getElementById('probability');
+      function myClassifier() {
+          // The image we want to classify
+        const image = document.querySelector('#image');
+        // The result tag in the HTML
+        const result = document.getElementById('result');
+        // The probability tag in the HTML
+        const probability = document.getElementById('probability');
 
-      // Initialize the Image Classifier method with MobileNet
-      const classifier = ml5.imageClassifier('MobileNet', function() {
-        console.log('Model Loaded!');
-      });
-    //   const classifier = ml5.imageClassifier('DarkNet', function() {
-    //     console.log('Model Loaded!');
-    //   });
+        // Initialize the Image Classifier method with MobileNet
+        const classifier = ml5.imageClassifier('MobileNet', function() {
+          console.log('Model Loaded!');
+        });
+      //   const classifier = ml5.imageClassifier('DarkNet', function() {
+      //     console.log('Model Loaded!');
+      //   });
 
-      // Make a prediction with the selected image
-      // This will return an array with a default of 10 options with their probabilities
-      classifier.predict(image, function(err, results) {
-        console.table(results);
-        result.innerText = results[0].className;
-        probability.innerText = results[0].probability.toFixed(4);
-      });
+        // Make a prediction with the selected image
+        // This will return an array with a default of 10 options with their probabilities
+        classifier.predict(image, function(err, results) {
+          console.table(results);
+          result.innerText = results[0].className;
+          probability.innerText = results[0].probability.toFixed(4);
+        });
+      }
+      
     </script>
   </body>
 </html>
