--- a/site/index.html
+++ b/site/index.html
@@ -163,18 +163,38 @@
           </div>
       </section> 
       <section id="aboutme" class="p-5">
-          <h3>Witek ten Hove</h3>
-          <div class="">
+        <div class="card border-dark mx-auto w-50" style="max-width: 50rem" id="meme">
+            <div class="card-body">
+              <h5 class="card-title display-4">
+                Witek ten Hove
+              </h5>
+              <div class="card-text">
+                <p>
+                  Witek ten Hove is docent en onderzoeker bij de Hogeschool van Arnhem en Nijmegen. 
+                  Bij de opleiding Bedrijfskunde is hij verantwoordelijk voor de kennisgebieden Data Analytics en Web Engineering. 
+                  Vanuit het Lectoraat Smart Business doet hij onderzoek naar innovaties m.b.v. Smart Technologies. 
+                  Door zijn ruime ervaring in de financiële wereld en de internationale handel en gedegen kennis van moderne webtechnologieën,
+                  slaat hij makkelijk bruggen tussen technologie en business.
+                </p>
+                <p>
+                  Als open source evangelist en onderwijsprofessional gelooft hij sterk in de kracht van kennisdeling. 
+                  Zijn missie is om zoveel mogelijk (jonge) professionals te inspireren en de mogelijkheden van Smart Technologies te helpen ontdekken. 
+                </p>
+              </div>
               <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget sit amet tellus cras adipiscing. Id donec ultrices tincidunt arcu non sodales neque sodales ut. Gravida dictum fusce ut placerat. Feugiat vivamus at augue eget arcu dictum. Eget duis at tellus at urna. Euismod nisi porta lorem mollis aliquam ut porttitor leo a. In hendrerit gravida rutrum quisque. Dui ut ornare lectus sit amet est placerat. Vel fringilla est ullamcorper eget. Pellentesque massa placerat duis ultricies lacus. Nisl vel pretium lectus quam. Lacus sed turpis tincidunt id aliquet risus feugiat. Vestibulum sed arcu non odio euismod lacinia at.
-              </p>
-              <p>
-                  Proin fermentum leo vel orci porta. Lectus magna fringilla urna porttitor rhoncus dolor purus non. Nec feugiat in fermentum posuere urna. Tortor dignissim convallis aenean et tortor at risus viverra. Tincidunt tortor aliquam nulla facilisi cras fermentum odio eu feugiat. Faucibus ornare suspendisse sed nisi. Ut diam quam nulla porttitor massa id neque. Tortor pretium viverra suspendisse potenti nullam ac tortor vitae purus. Cras pulvinar mattis nunc sed blandit libero volutpat. Sodales ut etiam sit amet nisl purus in. Vitae auctor eu augue ut lectus arcu bibendum at. Ac turpis egestas integer eget aliquet. Morbi tristique senectus et netus et malesuada fames. Ultrices in iaculis nunc sed augue lacus.
-              </p>
+                  Witek ten Hove is docent en onderzoeker bij de Hogeschool van Arnhem en Nijmegen. 
+                  Bij de opleiding Bedrijfskunde is hij verantwoordelijk voor de kennisgebieden Data Analytics en Web Engineering. 
+                  Vanuit het Lectoraat Smart Business doet hij onderzoek naar innovaties m.b.v. Smart Technologies. 
+                  Door zijn ruime ervaring in de financiële wereld en de internationale handel en gedegen kennis van moderne webtechnologieën,
+                  slaat hij makkelijk bruggen tussen technologie en business.
+                </p>
+                <p>
+                  Als open source evangelist en onderwijsprofessional gelooft hij sterk in de kracht van kennisdeling. 
+                  Zijn missie is om zoveel mogelijk (jonge) professionals te inspireren en de mogelijkheden van Smart Technologies te helpen ontdekken. 
+                </p>
+            </div>
+            <img class="card-img-bottom" src="aboutme.png" alt="Card image cap">
           </div>
-        <figure class="figure">
-            <img  class="rounded mx-auto d-block img-fluid" src="aboutme.png" id="aboutme" width="40%">
-        </figure>
       </section>     
     </div>
     
