Added content aboutme

--- a/site/index.html
+++ b/site/index.html
@@ -166,32 +166,22 @@
         <div class="card border-dark mx-auto w-50" style="max-width: 50rem" id="meme">
             <div class="card-body">
               <h5 class="card-title display-4">
+                <img class="mr-3" src="meme.png" alt="Meme">
                 Witek ten Hove
               </h5>
               <div class="card-text">
-                <p>
-                  Witek ten Hove is docent en onderzoeker bij de Hogeschool van Arnhem en Nijmegen. 
+                <p class="lead">
+                  Witek ten Hove is hoofddocent en onderzoeker bij de Hogeschool van Arnhem en Nijmegen. 
                   Bij de opleiding Bedrijfskunde is hij verantwoordelijk voor de kennisgebieden Data Analytics en Web Engineering. 
-                  Vanuit het Lectoraat Smart Business doet hij onderzoek naar innovaties m.b.v. Smart Technologies. 
-                  Door zijn ruime ervaring in de financiële wereld en de internationale handel en gedegen kennis van moderne webtechnologieën,
-                  slaat hij makkelijk bruggen tussen technologie en business.
+                  Vanuit het Lectoraat Smart Business doet hij onderzoek naar innovaties m.b.t. Smart Technologies. 
                 </p>
                 <p>
+                  Door zijn ruime ervaring in de financiële wereld en de internationale handel en gedegen kennis van moderne webtechnologieën,
+                  slaat hij makkelijk bruggen tussen technologie en business.
                   Als open source evangelist en onderwijsprofessional gelooft hij sterk in de kracht van kennisdeling. 
                   Zijn missie is om zoveel mogelijk (jonge) professionals te inspireren en de mogelijkheden van Smart Technologies te helpen ontdekken. 
                 </p>
               </div>
-              <p>
-                  Witek ten Hove is docent en onderzoeker bij de Hogeschool van Arnhem en Nijmegen. 
-                  Bij de opleiding Bedrijfskunde is hij verantwoordelijk voor de kennisgebieden Data Analytics en Web Engineering. 
-                  Vanuit het Lectoraat Smart Business doet hij onderzoek naar innovaties m.b.v. Smart Technologies. 
-                  Door zijn ruime ervaring in de financiële wereld en de internationale handel en gedegen kennis van moderne webtechnologieën,
-                  slaat hij makkelijk bruggen tussen technologie en business.
-                </p>
-                <p>
-                  Als open source evangelist en onderwijsprofessional gelooft hij sterk in de kracht van kennisdeling. 
-                  Zijn missie is om zoveel mogelijk (jonge) professionals te inspireren en de mogelijkheden van Smart Technologies te helpen ontdekken. 
-                </p>
             </div>
             <img class="card-img-bottom" src="aboutme.png" alt="Card image cap">
           </div>
