Changed source bottle

--- a/site/index.html
+++ b/site/index.html
@@ -149,7 +149,7 @@
               </div>
               <div class="card mx-5">
                   <h5 class="card-header">Voorbeeld</h5>
-                  <img src="https://upload.wikimedia.org/wikipedia/commons/0/0d/PET_Bottle_Water.jpg" class="card-img-top img-fluid" id="image" crossorigin="anonymous">
+                  <img src="PET_Bottle_Water.jpg" class="card-img-top img-fluid" id="image" crossorigin="anonymous">
                   <div class="card-body">
                     <blockquote class="blockquote">
                     <p class="mb-0">The MobileNet model labeled this as
