--- a/site/index.html
+++ b/site/index.html
@@ -179,7 +179,7 @@
                   Door zijn ruime ervaring in de financiële wereld en de internationale handel en gedegen kennis van moderne webtechnologieën,
                   slaat hij makkelijk bruggen tussen technologie en business.
                   Als open source evangelist en onderwijsprofessional gelooft hij sterk in de kracht van kennisdeling. 
-                  Zijn missie is om zoveel mogelijk (jonge) professionals te inspireren en de mogelijkheden van Smart Technologies te helpen ontdekken. 
+                  Zijn missie is om zoveel mogelijk (jonge) professionals te inspireren en de mogelijkheden van Smart Technologies te helpen verkennen. 
                 </p>
               </div>
             </div>
