--- a/site/index.html
+++ b/site/index.html
@@ -125,7 +125,7 @@
           <div class="row my-5">
             <div class="card-deck">
               <div class="card">
-                  <h5 class="card-header">Hoe makkelijk is ML eigenlijk?</h5>
+                  <h5 class="card-header">ML is makkelijk</h5>
                   <div class="card-body">
                     <div class="card-text">
                       <p>
