--- a/site/index.html
+++ b/site/index.html
@@ -172,7 +172,7 @@
               <div class="card-text">
                 <p class="lead">
                   Witek ten Hove is hoofddocent en onderzoeker bij de Hogeschool van Arnhem en Nijmegen. 
-                  Bij de opleiding Bedrijfskunde is hij verantwoordelijk voor de kennisgebieden Data Analytics en Web Engineering. 
+                  Bij de opleiding Bedrijfskunde is hij o.a. verantwoordelijk voor de kennisgebieden Data Analytics en Web Technologies. 
                   Vanuit het Lectoraat Smart Business doet hij onderzoek naar innovaties m.b.t. Smart Technologies. 
                 </p>
                 <p>
