--- a/site/index.html
+++ b/site/index.html
@@ -25,7 +25,7 @@
             <p class="lead">
               Kom dan op 19 november 2019 naar de Masterclass INTRO 2 ML van Witek ten Hove.<br>
               Tijd: 16:00u<br>
-              locatie: QING Groep
+              Locatie: QING Groep
             </p>
           </div>
         </div>
